Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -75,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution here "
+    "# 18 quarters, 12 dimes"
    ]
   },
   {
